<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateReservationActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please" />

    <EditText
        android:id="@+id/startCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/puDate"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/button_search"
        android:onClick="selectLocation"/>
    
    <EditText
        android:id="@+id/puDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startCity"
        android:layout_below="@+id/startCity"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/puDate"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:onClick="selectDate"
        android:text="@string/date" />

    <Button
        android:id="@+id/searchOffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/puDate"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginBottom="20dp"
        android:text="@string/button_searchOffer" 
        android:onClick="searchOffers"/>

    <TextView
        android:id="@+id/offerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/puDate"
        android:layout_alignRight="@+id/searchOffers"
        android:layout_below="@+id/puDate"
        android:layout_marginTop="22dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>